k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/huyduong2792/lesson_to_pdf:main
          command: ["uvicorn"]
          args: ["app:app", "--port=8000", "--host", "0.0.0.0"]
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: api-serivce
spec:
  selector:
    app: api
  ports:
    - port: 8000
      protocol: TCP
      targetPort: http
  type: ClusterIP
