k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vietquocxa.online.
    external-dns.alpha.kubernetes.io/ttl: "120" #optional

spec:
  selector:
    app: api
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
