k8s/mongodb.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: "mongo-data-dir"
              mountPath: "/data/db"
          # livenessProbe:
          #   exec:
          #     command:
          #       - mongo
          #       - --disableImplicitSessions
          #       - --eval
          #       - "db.adminCommand('ping')"
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   successThreshold: 1
          #   failureThreshold: 6
          # readinessProbe:
          #   exec:
          #     command:
          #       - mongo
          #       - --disableImplicitSessions
          #       - --eval
          #       - "db.adminCommand('ping')"
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   successThreshold: 1
          #   failureThreshold: 6
      volumes:
        - name: "mongo-data-dir"
          persistentVolumeClaim:
            claimName: pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service # responsible for enabling network access to the mongodb pod
  labels:
    name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      name: http
  type: NodePort
